
VERSION 0.7.2cvs
================

2005-10-19  Vincent Richard  <vincent@vincent-richard.net>

 * charsetConverter.{hpp|cpp}: new object 'charsetConverter' for converting
   between charsets (code moved from static functions in 'charset' class).

2005-10-16  Vincent Richard  <vincent@vincent-richard.net>

 * SConstruct: fixed compilation problems on FreeBSD (thanks to Xin LI).

2005-10-13  Vincent Richard  <vincent@vincent-richard.net>

 * attachmentHelper.{hpp|cpp}: the attachmentHelper allows listing all
   attachments in a message, as well as adding new attachments.

2005-10-06  Vincent Richard  <vincent@vincent-richard.net>

 * utility/progressionListener.{hpp|cpp}: renamed 'progressionListener'
   to 'progressListener'.

2005-10-04  Vincent Richard  <vincent@vincent-richard.net>

 * net/service: removed "server.socket-factory" property; added the
   service::setSocketFactory() function instead. Removed "name" parameter
   from platformDependant::getSocketFactory() function.

 * net/service: removed "timeout.factory" property; added the function
   service::setTimeoutHandlerFactory() instead. Removed the function
   platformDependant::getTimeoutHandlerFactory().

2005-10-03  Vincent Richard  <vincent@vincent-richard.net>

 * Added TLS/SSL support, using GNU TLS library.

2005-09-17  Vincent Richard  <vincent@vincent-richard.net>

 * Added SASL support, based on GNU SASL library. Slightly modified
   auhenticator object; see 'example6' which has been updated.

2005-09-06  Vincent Richard  <vincent@vincent-richard.net>

 * Created 'vmime::security' and 'vmime::security::digest' namespaces.
   MD5 has been moved here. Added SHA-1 hash algorithm.

2005-09-03  Vincent Richard  <vincent@vincent-richard.net>

 * encoder*, *contentHandler: added progression notifications.

2005-08-25  Vincent Richard  <vincent@vincent-richard.net>

 * Tests: moved to CppUnit for unit tests framework.

2005-08-23  Vincent Richard  <vincent@vincent-richard.net>
